Update navigation links and capitalize headings Fixed main text overlapping Fixed nav hiding behind relative content Finnalised nav bar style

--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
 
 * {
-  background-color: rgb(0, 0, 0);
-  color: whitesmoke;
   font-family: sans-serif;
   box-sizing: border-box;
 }
@@ -10,6 +8,8 @@
 a {
   text-decoration-line: none;
   font-weight: bold;
+  color: whitesmoke;
+  text-transform: uppercase;
 }
 
 nav a:hover {
@@ -19,10 +19,72 @@ nav a:hover {
 h1 {
   font-size: 2em;
   font-weight: bold;
-  text-transform: capitalize;
+  text-transform: uppercase;
 }
 
 h2 {
   font-size: 1.5em;
-  text-transform: capitalize;
+  text-transform: uppercase;
+}
+
+header {
+  height: 12.7vh;
+  width: 100%;
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 3rem;
+  padding-left: 3rem;
+  color: whitesmoke;
+  z-index: 1000;
+  /* border-style: solid; */
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  gap: 2.3rem;
+  font-size: 0.85em;
+}
+
+main {
+  color: whitesmoke;
+}
+
+.home {
+  height: 100vh;
+  background-image: url(./images/galaxy-5803c9f1.jpg);
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+}
+
+.tickets {
+  height: 100vh;
+  background-image: url(./images/landscape-2ee9445b.jpg);
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+}
+
+.pricing {
+  height: 100vh;
+  background-image: url(./images/eclipse-11d9479c.jpg);
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+}
+
+.title {
+  position: absolute;
+  bottom: 50px;
+  left: 50px;
+}
+
+footer {
+  background-color: black;
+  text-align: center;
+  color: #555;
+  padding: 40px;
 }
